# narada

./: AGENTS.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.pre-commit/: .pre-commit-config.yaml  .secrets.baseline  mypy.ini  ruff.toml
alembic/: alembic.ini  env.py  script.py.mako
alembic/versions/: 20250826_000001_initial.py
app/: main.py
app/core/: config.py  security.py
app/db/: models.py  session.py
docs/: README.md  index.md  mkdocs.yml
docs/api/: design.md
docs/architecture/: overview.md
docs/data-model/: overview.md
docs/dev/: conventions.md  testing.md
docs/ingestion/: pipelines.md
docs/ops/: migrations.md  taskfile.md
docs/product/: feedback-loop.md
docs/rag/: chroma.md
scripts/: init_db.py
tests/: conftest.py  test_app_root.py  test_security.py
